<resources>
    <string name="app_name">ShopWindow</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Not saved because it is empty.</string>
    <string name="sort">Sort</string>
    <string name="a_z">A-Z</string>
    <string name="price">Price</string>
    <string name="todo">TODO</string>
    <string name="basket">Basket</string>
    <string name="search">Search</string>
    <string name="for_woman">Женщинам</string>
    <string name="for_man">Мужчинам</string>
    <string name="for_kids">Детям</string>
    <string name="football">Футбол</string>
    <string name="basketball">Баскетбол</string>
    <string name="brands">Бренды</string>
    <string name="my_data">Мои данные</string>
    <string name="my_orders">Мои заказы</string>
    <string name="notifications">Уведомления</string>
    <string name="name">Имя</string>
    <string name="size">Размер:</string>
    <string name="color">Цвет:</string>
    <string name="number">Количество:</string>
    <string name="price_ru">Цена:</string>
    <string name="all_products">Всего товаров</string>
    <string name="all_products_sum">Товаров на сумму</string>
    <string name="basket_ru">Корзина</string>
    <string name="checkout">Оформить заказ</string>
    <string name="description">Описание</string>
    <string name="boys">Мальчикам</string>
    <string name="girls">Девочкам</string>
    <string name="your_data">Ваши данные</string>
    <string name="name_title">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="phone">Телефон</string>
    <string name="e_mail">E-mail</string>
</resources>
