<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/basket_material_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    app:cardBackgroundColor="@color/white"
    app:cardPreventCornerOverlap="true">

    <RelativeLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/rect"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="13dp">

        <ImageView
            android:id="@+id/basket_product_image"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:elevation="3dp"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:id="@+id/basket_info_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/basket_product_image"
            android:layout_toRightOf="@+id/basket_product_image">

            <TextView
                android:id="@+id/basket_product_name"
                style="@style/basket_text"
                android:text="@string/name"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/basket_product_size"
                style="@style/basket_text"
                android:layout_below="@+id/basket_product_name"
                android:text="@string/size"
                />

            <TextView
                android:id="@+id/basket_product_color"
                style="@style/basket_text"
                android:layout_below="@+id/basket_product_size"
                android:text="@string/color" />

            <TextView
                android:id="@+id/basket_product_number"
                style="@style/basket_text"
                android:layout_below="@+id/basket_product_color"
                android:text="@string/number" />

            <TextView
                android:id="@+id/basket_product_price"
                style="@style/basket_text"
                android:layout_width="wrap_content"
                android:layout_below="@+id/basket_product_number"
                android:text="@string/price_ru"
                android:textStyle="bold" />


        </RelativeLayout>

        <View
            style="@style/Line"
            android:layout_below="@+id/basket_product_image"
            android:layout_marginTop="8dp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/delete_order_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            app:icon="@drawable/ic_delete"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
             />

    </RelativeLayout>

</android.support.design.card.MaterialCardView>
